date alignment fix

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -40,7 +40,7 @@ $small-font: 8pt;
 
     &__date {
         flex: 0 0 var(--date-block-width);
-        line-height: 1.3;
+        line-height: 1.4;
         font-size: $small-font;
         font-weight: 600;
 
